<html>
<body>
<b>0.9.6</b>
<ul>
<li>added in basic webserver authentication mechanism for v1.1.1 libraries</li>
<li>switched the position of Commands page and Flags Page</li>
<li>added in Notifications for Water Level 1-4 and Humidity</li>
<li>added in 16 channel pwm support</li>
</ul>
<br>
<b>0.9.5</b>
<ul>
<li>added in pwm override control</li>
<li>added in calibration commands</li>
<li>added in flags page to display Status and Alert flags</li>
<li>added in auto refresh after a command or pwm override update</li>
<li>improved Vortech popup
	<ul>
	<li>shows a slider for speed and duration</li>
	<li>popup starts with current values instead of defaulting to 0</li>
	</ul>
</li>
<li>code cleanup</li>
</ul>
<br>
<b>0.9.4</b>
<ul>
<li>improved XML downloading</li>
<li>added 4 channel water level module displaying</li>
<li>allow portal to be chosen from first run screen</li>
<li>removed Commands option from overflow menu, changed to Date/Time</li>
<li>get software version is added to the Commands Page</li>
<li>added humidity expansion</li>
<li>code cleanup</li>
</ul>
</body>
</html>