@@ -13,7 +13,7 @@ http://creativecommons.org/licenses/by-nc-sa/3.0/
 	android:layout_height="fill_parent"
 	android:orientation="vertical">
 	<WebView
-		android:id="@+id/changelogText"
+		android:id="@+id/logText"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		/>
