@@ -9,9 +9,12 @@ package info.curtbinder.reefangel.phone;
  */
 
 import java.io.BufferedReader;
+import java.io.FileNotFoundException;
+import java.io.FileReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
-
+import java.io.Reader;
+import android.annotation.SuppressLint;
 import android.app.Activity;
 import android.app.AlertDialog;
 import android.content.Context;
@@ -23,20 +26,20 @@ import android.webkit.WebView;
 /*
  * Displays the changelog
  */
-public class Changelog {
+public class DisplayLog {
 
 	private static final String ASSET_CHANGELOG = "changelog.txt";
 
-	public static void displayChangelog ( Activity a ) {
-		// always display the changelog when this is called
+	@SuppressLint("InflateParams")
+	private static void displayLog ( Activity a, int titleId, String data ) {
 		final AlertDialog.Builder bld = new AlertDialog.Builder( a );
 		bld.setCancelable( false );
-		bld.setTitle( a.getString( R.string.titleChangelog ) );
+		bld.setTitle( a.getString( titleId ) );
 		LayoutInflater inf =
 				(LayoutInflater) a.getSystemService( Context.LAYOUT_INFLATER_SERVICE );
-		View layout = inf.inflate( R.layout.changelog, null );
-		WebView wv = (WebView) layout.findViewById( R.id.changelogText );
-		wv.loadDataWithBaseURL( null, readChangelog(a), "text/html", "utf-8", null );
+		View layout = inf.inflate( R.layout.displaylog, null );
+		WebView wv = (WebView) layout.findViewById( R.id.logText );
+		wv.loadDataWithBaseURL( null, data, "text/html", "utf-8", null );
 		bld.setView( layout );
 		bld.setPositiveButton(	a.getString( R.string.buttonOk ),
 								new DialogInterface.OnClickListener() {
@@ -47,16 +50,25 @@ public class Changelog {
 										dialog.dismiss();
 									}
 								} );
-		bld.create().show();
+		bld.create().show();		
 	}
-
-	private static String readChangelog ( Context a ) {
+	
+	public static void displayChangelog ( Activity a ) {
+		// always display the changelog when this is called
+		try {
+			InputStreamReader is = 
+					new InputStreamReader( a.getAssets().open( ASSET_CHANGELOG ) );
+			displayLog(a, R.string.titleChangelog, 
+			           readFile(a, is));
+		} catch ( IOException e ) {
+		}
+	}
+	
+	private static String readFile ( Context a, Reader reader ) {
 		BufferedReader in = null;
 		StringBuilder buf;
 		try {
-			in =
-					new BufferedReader( new InputStreamReader( a.getAssets()
-							.open( ASSET_CHANGELOG ) ) );
+			in = new BufferedReader( reader );
 			buf = new StringBuilder( 8192 );
 			String line;
 			while ( (line = in.readLine()) != null )
@@ -72,5 +84,12 @@ public class Changelog {
 			}
 		}
 		return buf.toString();
+	}
+	
+	public static void displayErrorlog ( Activity a, String logFile ) {
+		try {
+			displayLog(a, R.string.titleErrorlog, readFile(a, new FileReader(logFile)));
+		} catch ( FileNotFoundException e ) {
+		}
 	}
 }
