@@ -6,6 +6,11 @@
 <li>switched the position of Commands page and Flags Page</li>
 <li>added in Notifications for Water Level 1-4 and Humidity</li>
 <li>added in 16 channel pwm support</li>
+<li>removed ActionBarSherlock and ViewPagerIndicator library dependencies</li>
+<li>switched to use OkHttp library for network function calls</li>
+<li>changed minsdk to 7 (was 5), which is Android 2.1</li>
+<li>improved error messages</li>
+<li>code cleanup and bug fixes</li>
 </ul>
 <br>
 <b>0.9.5</b>
